# decision-engine/routes/balanceSheet.js
@@ -1,7 +1,0 @@
-import { Router } from "express";
-import { balanceSheet } from "../controllers/balanceSheet.js";
-
-const router = Router();
-router.get("/", balanceSheet);
-
-export default router;
